# progetto-pds

./: Cargo.toml  prova.rs
src/: cutting.rs  main.rs  myapp.rs  painting.rs  prova.rs
